--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-$Id$
+** Archived and read-only on 14-Apr-2025 **
 
 This is doorlib, a library to easy write native Unix bbs doors. This library
 contains some general functions for doors.
