Small tweaks to prevent errors on modern compilers - Tested on FreeBSD 14.3 and Debian 12 (compiles without error)

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+** Updated 2025-07-14 to work with modern compilers **
+
 ** Archived and read-only on 14-Apr-2025 **
 
 This is doorlib, a library to easy write native Unix bbs doors. This library
